# golf-game

./: .gitignore  CMakeLists.txt
include/: application.cpp  application.hpp  entity.hpp  resource_manager.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  test_scene.cpp  test_scene.hpp
include/components/: sprite_component.hpp
include/core/: application.cpp  resource_manager.cpp  scene_manager.hpp
include/entities/: entity.cpp  entity.hpp
include/entities/components/: component.hpp  sprite_component.cpp  sprite_component.hpp
include/scenes/: scene.cpp  scene.hpp  test_scene.cpp
src/: main.cpp
tools/: create-context.sh
